--- a/notebooks/dia_01/m_001_Introduccion.ipynb
+++ b/notebooks/dia_01/m_001_Introduccion.ipynb
@@ -11,7 +11,7 @@
     "# Introducción a Python.\n",
     "1. Qué es Python y la libreta de Jupyter\n",
     "1. Instala y ejecuta Jupyter Notebook en diferentes OS\n",
-    "1. Anaconda, explicar por qué no es la primera opción.\n",
+    "1. Anaconda, explicar entre otras cosas por qué no es la primera opción.\n",
     "1. Google Collaboratory\n",
     "1. Paseo por la libreta de Jupyter\n",
     "1. Sintaxis en Python\n",
