--- a/notebooks/dia_01/m_000_Temario.ipynb
+++ b/notebooks/dia_01/m_000_Temario.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "# Introducción a Python.\n",
     "1. Qué es Python y la libreta de Jupyter\n",
+    "1. Estad'istica de uso de Python\n",
     "1. Instala y ejecuta Jupyter Notebook en diferentes OS\n",
     "1. Anaconda, explicar entre otras cosas por qué no es la primera opción.\n",
     "1. Google Collaboratory\n",
@@ -19,10 +20,20 @@
     "1. print(“hola mundo”) con botones y shortcuts\n",
     "1. Estructura de archivos recomendada\n",
     "1. Ejecuta Jupyter donde quieres\n",
+    "    1. Windows\n",
+    "    1. Linux\n",
+    "    1. MacOs\n",
     "1. Acceso a la documentación\n",
     "1. Errores comunes  \n",
     "1. Tarea: Instala Jupyter Notebook\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
