--- a/notebooks/dia_04/001_Intro a pandas.ipynb
+++ b/notebooks/dia_04/001_Intro a pandas.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "modular-trademark",
+   "id": "flush-lying",
    "metadata": {},
    "source": [
     "# Introducci'on a pandas\n",
@@ -18,9 +18,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "statewide-computer",
+   "metadata": {},
+   "source": [
+    "# Library Highlights\n",
+    "\n",
+    "1. A fast and efficient DataFrame object for data manipulation with integrated indexing;\n",
+    "1. Tools for reading and writing data between in-memory data structures and different formats: CSV and text files, Microsoft Excel, SQL databases, and the fast HDF5 format;\n",
+    "\n",
+    "1. Intelligent data alignment and integrated handling of missing data: gain automatic label-based alignment in computations and easily manipulate messy data into an orderly form;\n",
+    "\n",
+    "1. Flexible reshaping and pivoting of data sets;\n",
+    "\n",
+    "1. Intelligent label-based slicing, fancy indexing, and subsetting of large data sets;\n",
+    "\n",
+    "1. Columns can be inserted and deleted from data structures for size mutability;\n",
+    "\n",
+    "1. Aggregating or transforming data with a powerful group by engine allowing split-apply-combine operations on data sets;\n",
+    "\n",
+    "1. High performance merging and joining of data sets;\n",
+    "\n",
+    "1. Hierarchical axis indexing provides an intuitive way of working with high-dimensional data in a lower-dimensional data structure;\n",
+    "\n",
+    "1. Time series-functionality: date range generation and frequency conversion, moving window statistics, date shifting and lagging. Even create domain-specific time offsets and join time series without losing data;\n",
+    "\n",
+    "1. Highly optimized for performance, with critical code paths written in Cython or C.\n",
+    "\n",
+    "1. Python with pandas is in use in a wide variety of academic and commercial domains, including Finance, Neuroscience, Economics, Statistics, Advertising, Web Analytics, and more.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "serious-montreal",
+   "id": "atmospheric-questionnaire",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "common-donna",
+   "id": "deluxe-cardiff",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "hourly-roman",
+   "id": "wanted-thing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "entitled-astronomy",
+   "id": "dependent-australia",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +161,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "virgin-calibration",
+   "id": "variable-notice",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -138,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-vintage",
+   "id": "middle-hollywood",
    "metadata": {},
    "outputs": [],
    "source": []
