--- a/notebooks/dia_04/001_Intro a pandas.ipynb
+++ b/notebooks/dia_04/001_Intro a pandas.ipynb
@@ -169,11 +169,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "middle-hollywood",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "developmental-canadian",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_excel"
+   ]
   }
  ],
  "metadata": {
