--- a/notebooks/dia_05/000_Resumen_dia04.ipynb
+++ b/notebooks/dia_05/000_Resumen_dia04.ipynb
@@ -104,7 +104,8 @@
     "    df['columa']\n",
     "    df[['columa1','columna2']]\n",
     "    ```\n",
-    "    1. "
+    "    1. df.groupby\n",
+    "    1. df[filtro]"
    ]
   },
   {
