--- a/notebooks/dia_05/001_OperacionesBasicas.ipynb
+++ b/notebooks/dia_05/001_OperacionesBasicas.ipynb
@@ -1629,7 +1629,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1839,6 +1841,88 @@
    ],
    "source": [
     "tmx.resample('D').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ib</th>\n",
+       "      <th>Ig</th>\n",
+       "      <th>To</th>\n",
+       "      <th>RH</th>\n",
+       "      <th>WS</th>\n",
+       "      <th>WD</th>\n",
+       "      <th>P</th>\n",
+       "      <th>Tsa</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-03-10</th>\n",
+       "      <td>259.950833</td>\n",
+       "      <td>258.259021</td>\n",
+       "      <td>25.609236</td>\n",
+       "      <td>25.098472</td>\n",
+       "      <td>1.88266</td>\n",
+       "      <td>174.966813</td>\n",
+       "      <td>87269.497847</td>\n",
+       "      <td>27.66906</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Ib          Ig         To         RH       WS          WD  \\\n",
+       "time                                                                            \n",
+       "2018-03-10  259.950833  258.259021  25.609236  25.098472  1.88266  174.966813   \n",
+       "\n",
+       "                       P       Tsa  \n",
+       "time                                \n",
+       "2018-03-10  87269.497847  27.66906  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmx.loc['2018-03-10'].resample('D').mean()"
    ]
   },
   {
